--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,7 @@ button {
 .product-description {
   border: 1px solid var(--color-border-product);
   border-top: 0px;
+  align-items: flex-start;
 }
 .bottom-link {
   list-style-type: none;
